--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,41 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+    <!-- !!!!! Для надоїдалкі!!!!!!! -->
+    <!-- <p class="alert success js-alert">Операція виконана успішно!</p> -->
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
+
+    <!-- !!!!! Через  bootstrap -->
+    <div id="myModal" class="modal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modal title</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>Modal body text goes here.</p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary" data-subscribe>
+              Save changes
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
